[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""cch23-13"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="cch23-13"
repository ="https://github.com/thor314/cch23-13"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
cute = "0.3.0"
tracing = "0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3" 
thiserror="1.0"
env_logger = "0.11"
 
axum = { version = "0.7.3", features = ["macros"] }
shuttle-axum = "0.40.0"
shuttle-runtime = { version = "0.39", default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
shuttle-secrets = "0.39.0"
sqlx = { version = "0.7.3", features = ["postgres"] }
# note: need both postgres and sqlx
shuttle-shared-db = { version = "0.39.0", features = ["postgres", "sqlx"] }
serde_json = "1.0.113"
[dev-dependencies]
rstest    ="0.18"         # testing convenience proc-macros
